# chart-histogram

./: README.md  Test.hs  TestHeatMap.hs  chart-histogram.cabal
Graphics/Rendering/Chart/: ColorMap.hs
Graphics/Rendering/Chart/Plot/: HeatMap.hs  Histogram.hs
Numeric/: Histogram.hs
