Name:                chart-histogram
Version:             0.3
Synopsis:            Easily render histograms with Chart
-- Description:
License:             BSD3
License-file:        LICENSE
Author:              Ben Gamari
Maintainer:          bgamari.foss@gmail.com
Copyright:           Ben Gamari 2013
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Numeric.Histogram,
                       Graphics.Rendering.Chart.Plot.Histogram

  Build-depends:       base,
                       vector,
                       Chart >= 1.0,
                       lens,
                       colour,
                       data-default

